data/derived/sp14/progs/unify/prog4912.ml.out
Characters 211-212:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type
         int * (int * int) list -> int list -> int * int list
       but an expression was expected of type
         int * (int * int) list -> int list -> int * (int * int) list
       Type int is not compatible with type int * int 
